改回白色背景：普通指标卡恢复白色背景+深色文字

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -103,59 +103,11 @@
         .trend-down { color: #FF4D4F; }
         .indicator-card .trend-flat { color: #8C8C8C; }
 
-        /* 普通指标卡：纯色背景+白色文字（统一所有展示） */
-        .indicator-card.blue {
-            background: #5B8FF9;
-            border: none;
-            box-shadow: 0 2px 8px rgba(91,143,249,0.25);
-        }
-        .indicator-card.blue .label,
-        .indicator-card.blue .value,
-        .indicator-card.blue .value .value-num,
-        .indicator-card.blue .value .value-prefix,
-        .indicator-card.blue .value .suffix,
-        .indicator-card.blue .trend,
-        .indicator-card.blue .trend.trend-up,
-        .indicator-card.blue .trend.trend-down { color: #fff !important; }
-        .indicator-card.green {
-            background: #52C41A;
-            border: none;
-            box-shadow: 0 2px 8px rgba(82,196,26,0.25);
-        }
-        .indicator-card.green .label,
-        .indicator-card.green .value,
-        .indicator-card.green .value .value-num,
-        .indicator-card.green .value .value-prefix,
-        .indicator-card.green .value .suffix,
-        .indicator-card.green .trend,
-        .indicator-card.green .trend.trend-up,
-        .indicator-card.green .trend.trend-down { color: #fff !important; }
-        .indicator-card.yellow {
-            background: #FAAD14;
-            border: none;
-            box-shadow: 0 2px 8px rgba(250,173,20,0.25);
-        }
-        .indicator-card.yellow .label,
-        .indicator-card.yellow .value,
-        .indicator-card.yellow .value .value-num,
-        .indicator-card.yellow .value .value-prefix,
-        .indicator-card.yellow .value .suffix,
-        .indicator-card.yellow .trend,
-        .indicator-card.yellow .trend.trend-up,
-        .indicator-card.yellow .trend.trend-down { color: #fff !important; }
-        .indicator-card.red {
-            background: #FF4D4F;
-            border: none;
-            box-shadow: 0 2px 8px rgba(255,77,79,0.25);
-        }
-        .indicator-card.red .label,
-        .indicator-card.red .value,
-        .indicator-card.red .value .value-num,
-        .indicator-card.red .value .value-prefix,
-        .indicator-card.red .value .suffix,
-        .indicator-card.red .trend,
-        .indicator-card.red .trend.trend-up,
-        .indicator-card.red .trend.trend-down { color: #fff !important; }
+        /* 普通指标卡：白色背景+深色文字（保持紧凑尺寸） */
+        .indicator-card.blue { }
+        .indicator-card.green { }
+        .indicator-card.yellow { }
+        .indicator-card.red { }
 
         .variant-section { margin-top: 32px; }
         .variant-row {
