补充良好/警告/异常三态的适用场景说明

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -644,6 +644,17 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
             <strong>判定建议：</strong> 根据业务设定阈值，结合趋势与绝对值综合判断；考虑季节性；建议在配置中预设阈值并支持业务灵活调整。
         </div>
     </div>
+    <div class="scenario-example" style="margin-top: 12px;">
+        <div class="scenario-example-title">适用场景</div>
+        <div class="scenario-example-content">
+            <strong>电商/零售：</strong> 销售额、客单价、转化率、退货率等核心指标监控，一眼识别健康/预警/异常。<br>
+            <strong>营销：</strong> 投放效果、转化、获客成本等，异常时及时干预。<br>
+            <strong>运营：</strong> 服务时效、错误率、产能等，异常需立即排查。<br>
+            <strong>财务：</strong> 营收、利润、费用控制、现金流等，快速把握经营健康度。<br>
+            <strong>项目/人力：</strong> 进度、预算、出勤率、绩效等，便于管理层做决策与资源调配。<br>
+            适用于需要<strong>一目了然看业务健康、按优先级处理问题</strong>的 BI 看板与绩效监控场景。
+        </div>
+    </div>
 </div>
 
 <!-- 特殊：带目标值；数据格式：百分比、大数值；趋势：下降、持平 -->
