--- a/kpi-showcase.html
+++ b/kpi-showcase.html
@@ -292,6 +292,12 @@
                     <p style="margin-top: 12px; color: #595959;"><strong>判定建议：</strong> 根据业务设定阈值，结合趋势与绝对值综合判断；考虑季节性，建议在配置中预设阈值并支持业务灵活调整。</p>
                 </div>
             </div>
+            <div class="usage-item">
+                <div class="usage-item-title">6. 适用场景</div>
+                <div class="usage-item-content">
+                    电商/零售：销售额、客单价、转化率、退货率等核心指标监控。营销：投放效果、转化、获客成本等，异常时及时干预。运营：服务时效、错误率、产能等，异常需立即排查。财务：营收、利润、费用控制、现金流等，快速把握经营健康度。项目/人力：进度、预算、出勤率、绩效等，便于管理层做决策与资源调配。适用于需要一目了然看业务健康、按优先级处理问题的 BI 看板与绩效监控场景。
+                </div>
+            </div>
         </div>
     </div>
     <script>
